# latch

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  cliff.toml  deny.toml  deploy.sh  docker-compose.yml  openapi.json  sonar-project.properties
backend/: Cargo.toml
backend/config/: development.yaml  production.yaml  test.yaml
backend/examples/: playground.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20260624_000001_create_projects.rs  m20260624_000002_create_versions.rs  m20260624_000003_create_sessions.rs  m20260629_000004_add_release_notes_to_versions.rs  m20260630_000005_add_comments_enabled_to_projects.rs  m20260630_000006_create_comment_tables.rs
backend/src/: app.rs  lib.rs  openapi.rs
backend/src/controllers/: admin.rs  auth.rs  dto.rs  error.rs  mod.rs  serve.rs  serve_ratelimit.rs  settings.rs
backend/src/controllers/middleware/: origin.rs
backend/src/dto/: mod.rs
backend/src/mcp/: mod.rs
backend/src/models/: comment_pins.rs  comments.rs  mod.rs  projects.rs  versions.rs
backend/src/models/_entities/: comment_pins.rs  comments.rs  mod.rs  prelude.rs  projects.rs  versions.rs
backend/src/services/: comments.rs  deploy.rs  errors.rs  mod.rs  pin.rs  projects.rs  security.rs  slug.rs  storage.rs  test_support.rs  unlock_cookie.rs  validation.rs
backend/src/web/: extract.rs  mod.rs
backend/tests/: admin_api.rs  architecture.rs  comments_admin.rs  comments_serve.rs  hardening.rs  mcp_http.rs  openapi_drift.rs  security_invariants.rs  serve.rs  settings_api.rs  spa_serving.rs  validation_invariant.rs
backend/tests/requests/: home.rs
frontend/: .gitignore  Cargo.toml  Trunk.toml  error.html  eslint.config.js  index.html  package.json  playwright.config.ts  playwright.vite.config.ts  pnpm-lock.yaml  shell.html  tsconfig.app.json  unlock.html  vite.config.ts  vitest.config.ts  vitest.setup.ts
frontend/e2e/: admin-smoke.spec.ts  comments-admin.spec.ts  comments.spec.ts  screenshots.capture.ts  serve-unlock.spec.ts
frontend/e2e-vite/: vite-smoke.spec.ts
frontend/e2e/fixtures/: proto-v2.html  proto.html
frontend/locales/: en.yml  fr.yml
frontend/src/: auth.rs  i18n.rs  index.css  main.rs  main.tsx  router.tsx  routes.rs  theme.test.tsx  toast.rs
frontend/src/api/: client.rs  client.ts  error.rs  mod.rs  schema.d.ts
frontend/src/comments/: comments-app.test.tsx  comments-app.tsx  index.ts
frontend/src/comments/anchor/: describe.test.ts  describe.ts  descriptor.test.ts  descriptor.ts  resolve.test.ts  resolve.ts  similarity.test.ts  similarity.ts
frontend/src/comments/data/: adapter.ts  admin-adapter.test.ts  admin-adapter.ts  use-comments.test.tsx  use-comments.ts  visitor-adapter.test.ts  visitor-adapter.ts
frontend/src/components/: copy-button.test.tsx  copy-button.tsx  copy_button.rs  delete-project-panel.tsx  delete-version-panel.tsx  deploy-panel.test.tsx  deploy-panel.tsx  github-icon.tsx  language-select.test.tsx  language-select.tsx  locale-switcher.test.tsx  locale-switcher.tsx  locale_switcher.rs  logo.test.tsx  logo.tsx  mod.rs  notes-editor.test.tsx  notes-editor.tsx  pin-field.test.tsx  pin-field.tsx  pin_field.rs  project-form.test.tsx  project-form.tsx  settings-sheet.test.tsx  settings-sheet.tsx  theme-toggle.test.tsx  theme-toggle.tsx  toggle.rs  topbar.test.tsx  topbar.tsx  version-comments-panel.test.tsx  version-comments-panel.tsx  version-detail-panel.test.tsx  version-detail-panel.tsx
frontend/src/error/: error-page.test.tsx  error-page.tsx  i18n.ts  main.tsx
frontend/src/hooks/: use-auth.ts  use-document-lang.ts  use-document-title.test.ts  use-projects.test.tsx  use-projects.ts  use-settings.ts  use-version-comments.test.tsx  use-version-comments.ts
frontend/src/i18n/: available-locales.test.ts  available-locales.ts  create-bundle-i18n.ts  i18n.test.ts  index.ts
frontend/src/lib/: links.ts  markdown.test.tsx  markdown.tsx  utils.test.ts  utils.ts
frontend/src/pages/: detail.rs  list.rs  login.rs  mod.rs
frontend/src/panels/: delete_project.rs  delete_version.rs  deploy.rs  mod.rs  project_form.rs
frontend/src/routes/: detail.test.tsx  detail.tsx  list.test.tsx  list.tsx  login.test.tsx  login.tsx  review.test.tsx  review.tsx  settings.test.tsx  settings.tsx
frontend/src/shell/: comments-mount.test.tsx  comments-mount.tsx  i18n.ts  main.tsx  shell-page.test.tsx  shell-page.tsx
frontend/src/test/: msw.ts  utils.tsx
frontend/src/types/: index.ts
frontend/src/unlock/: i18n.test.ts  i18n.ts  main.tsx  reload.ts  unlock-page.test.tsx  unlock-page.tsx
frontend/src/util/: clipboard.rs  mod.rs  pin.rs  url.rs
frontend/styles/: app.css  base.css  components.css  shadcn-rs.css  utilities.css  variables.css
(+161 files in other folders)
