[package]
name = "latch"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "latch-cli"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loco-rs = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.45", default-features = false, features = [
  "rt-multi-thread",
  "fs",
] }
async-trait = { version = "0.1" }
axum = { version = "0.8" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
regex = { version = "1.11" }
migration = { path = "migration" }
sea-orm = { version = "1.1", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
] }
# SQLite embarqué dans le binaire : aucune lib système requise dans l'image runtime
# (distroless/alpine). Cf. BOOTSTRAP §1 et QUIRKS « SQLite dans l'image ».
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
chrono = { version = "0.4" }
utoipa = { version = "5" }
validator = { version = "0.20" }
uuid = { version = "1.6", features = ["v4"] }
thiserror = { version = "2" }
rand = { version = "0.8" }
subtle = { version = "2" }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["fs"] }
tower_governor = { version = "0.7" }
axum_session = { version = "0.16" }
axum_session_sqlx = { version = "0.5", features = ["sqlite", "tls-rustls"] }
time = { version = "0.3" }

[[bin]]
name = "latch-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = { version = "3.1.1" }
rstest = { version = "0.25" }
insta = { version = "1.34", features = ["redactions", "yaml", "filters"] }
tempfile = { version = "3" }
