[package]
name = "latch-ui"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
# Bibliothèque de composants admin. Très jeune (0.1.0, API instable) — cf.
# docs/QUIRKS.md. Épinglée dès la Phase 0, réellement utilisée en Phase 3.
shadcn-rs = "0.1"
