[package]
name = "latch-ui"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-net = { version = "0.6", default-features = false, features = ["http", "json"] }
gloo-timers = "0.3"
gloo-file = { version = "0.3", features = ["futures"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
latch-dto = { path = "../latch-dto" }
shadcn-rs = "0.1"
rust-i18n = "3"

[dependencies.web-sys]
version = "0.3"
features = ["Window", "Location", "Document", "Navigator", "Clipboard", "HtmlInputElement", "File", "FileList", "Crypto"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.i18n]
available-locales = ["en", "fr"]
default-locale = "en"
load-path = "locales"
